<resources>
    <string name="app_name">Memory Game</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="game_size">Game Size :</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="timer">Timer :</string>
    <string name="gameSize4">4</string>
    <string name="gameSize6">6</string>
    <string name="number_range">Number Range :</string>
    <string name="starting_wait">Starting Wait :</string>
    <string name="hint_100">100</string>
    <string name="hint_999">999</string>
    <string name="game_settings">Game Settings</string>
    <string name="back">Return</string>
    <string name="newGame">New Game</string>
</resources>
