<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/game_settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.449"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGameSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/game_size"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading" />

    <RadioGroup
        android:id="@+id/rgGameSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tvGameSize"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvGameSize">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/gameSize4" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rb6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_weight="1"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/gameSize6" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rgTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/tvTimer"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvTimer"
        app:layout_constraintVertical_bias="0.327">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:padding="10dp"
            android:text="@string/on" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/rbOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/off" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spWait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tvWait"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvWait" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/timer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvRange"
        app:layout_constraintTop_toBottomOf="@+id/tvRange" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/number_range"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvWait"
        app:layout_constraintTop_toBottomOf="@+id/tvWait" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/starting_wait"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvGameSize"
        app:layout_constraintTop_toBottomOf="@+id/tvGameSize" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRangeStart"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_100"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tvRange"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tvRange"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/etRangeStart"
        app:layout_constraintEnd_toStartOf="@+id/etRangeEnd"
        app:layout_constraintStart_toEndOf="@+id/etRangeStart"
        app:layout_constraintTop_toTopOf="@+id/etRangeStart" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etRangeEnd"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_999"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/etRangeStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etRangeStart"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnExit"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBack"
        app:layout_constraintTop_toTopOf="@+id/btnBack" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="174dp" />

</androidx.constraintlayout.widget.ConstraintLayout>

